--- a/tp5/application/index/view/index/medias.html
+++ b/tp5/application/index/view/index/medias.html
@@ -10,7 +10,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Developr</title>
+	<title>无纸化办公</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" href="__PUBLIC__/css/reset.css?v=1">
 	<link rel="stylesheet" href="__PUBLIC__/css/style.css?v=1">
 	<link rel="stylesheet" href="__PUBLIC__/css/colors.css?v=1">
-	<link rel="stylesheet" media="print" href="css/print.css?v=1">
+	<link rel="stylesheet" media="print" href="__PUBLIC__/css/print.css?v=1">
 	<!-- For progressively larger displays -->
 	<link rel="stylesheet" media="only all and (min-width: 480px)" href="__PUBLIC__/css/480.css?v=1">
 	<link rel="stylesheet" media="only all and (min-width: 768px)" href="__PUBLIC__/css/768.css?v=1">
@@ -36,12 +36,13 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
 
 	<!-- Additional styles -->
-	<link rel="stylesheet" href="__PUBLIC__/css/styles/progress-slider.css?v=1">
-	<link rel="stylesheet" href="__PUBLIC__/css/styles/switches.css?v=1">
-	<link rel="stylesheet" href="__PUBLIC__/css/styles/files.css?v=1">
 	<link rel="stylesheet" href="__PUBLIC__/css/styles/form.css?v=1">
+	<link rel="stylesheet" href="__PUBLIC__/css/styles/switches.css?v=1">
 	<link rel="stylesheet" href="__PUBLIC__/css/styles/table.css?v=1">
 	<link rel="stylesheet" href="__PUBLIC__/css/styles/modal.css?v=1">
+
+	<!-- DataTables -->
+	<link rel="stylesheet" href="__PUBLIC__/js/libs/DataTables/jquery.dataTables.css?v=1">
 
 	<!-- JavaScript at bottom except for Modernizr -->
 	<script src="__PUBLIC__/js/libs/modernizr.custom.js"></script>
@@ -92,43 +93,28 @@
 		<noscript class="message black-gradient simpler">Your browser does not support JavaScript! Some features won't work as expected...</noscript>
 
 		<hgroup id="main-title" class="thin">
-			<h1>Shared file</h1>
+			<h1>公共资料</h1>
 		</hgroup>
-
-		<section role="main" id="main">
-
-		<form action="upfile" method="post" enctype="multipart/form-data">
-
-		<p class="button-height">
-			<input type="file" name="file" id="file" value="请选择文件" class="file" multiple>
-		</p>
-	
-		<p class="button-height">
-			<button type="submit" class="button big">Button</button>
-		</p>
-	
-		</form>
 		
-
-
 		<div class="with-padding">
-	
+
 			<table class="table responsive-table" id="sorting-advanced">
 
 				<thead>
 					<tr>
 						<th scope="col"><input type="checkbox" name="check-all" id="check-all" value="1"></th>
 						<th scope="col">文件名</th>
-						<th scope="col" width="15%" class="align-center hide-on-mobile">文件状态</th>
-						<th scope="col" width="15%" class="align-center hide-on-mobile-portrait">文件类型</th>
-						<th scope="col" width="60" class="align-center">Actions</th>
+						<th scope="col" width="15%" class="align-center hide-on-mobile">文件类型</th>
+						<th scope="col" width="15%" class="align-center hide-on-mobile-portrait">分享时间</th>
+						<th scope="col" width="15%" class="hide-on-tablet">分享者</th>
+						<th scope="col" width="60" class="align-center">操作</th>
 					</tr>
 				</thead>
 
 				<tfoot>
 					<tr>
 						<td colspan="6">
-							3 entries found
+							6 entries found
 						</td>
 					</tr>
 				</tfoot>
@@ -136,11 +122,13 @@
 				<tbody>					
 						{volist name="result" id="vo"}
 						<tr>
+
 						<th scope="row" class="checkbox-cell"><input type="checkbox" name="checked[]" id="check-1" value="1"></th>
-						<td>{$vo.filename}</td>
-						<td>{$vo.status}</td>
-						<td>{$vo.filezui}</td>
-						<td class="low-padding align-center"><a href="{:url('index/index/download')}" class="button compact icon-gear">LOAD</a><a href="javascript:openModaldelect()" class="button compact icon-gear">DEL</a></td>
+						<td>{$vo['filename']}</td>
+						<td>{$vo['filezui']}</td>
+						<td>{$vo['filetime']}</td>
+						<td><small class="tag">{$vo['filepeople']}</small></td>
+						<td class="low-padding align-center"><a href="{:url('index/index/download')}" class="button compact icon-gear">LOAD</a>
 						</tr>		
 						{/volist}
 					
@@ -150,21 +138,28 @@
 
 		</div>
 
+		<form action="upfile" method="post" enctype="multipart/form-data" style="margin:30px">
 
-	</section>
-
+		<p class="button-height">
+			<input type="file" name="file" id="file" value="请选择文件" class="file" multiple>
+		</p>
 	
+		<p class="button-height">
+			<button type="submit" class="button big">上传</button>
+		</p>
+	
+		</form>
 
 	</section>
 	<!-- End main content -->
 
 	<!-- Side tabs shortcuts -->
 	<ul id="shortcuts" role="complementary" class="children-tooltip tooltip-right">
-		<li ><a href="{:url('index/index/zhuye')}" class="shortcut-dashboard" title="Dashboard">Basic routine</a></li>
+		<li><a href="{:url('index/index/zhuye')}" class="shortcut-dashboard" title="Dashboard">Basic routine</a></li>
 		<li><a href="{:url('index/index/message')}" class="shortcut-messages" title="Messages">Messages</a></li>
 		<li><a href="{:url('index/index/agenda')}" class="shortcut-agenda" title="Agenda">Agenda</a></li>
-		<li><a href="{:url('index/index/Contacts')}" class="shortcut-contacts" title="Contacts">Contacts</a></li>
-		<li class="current"><a href="{:url('index/index/medias')}" class="shortcut-medias" title="Medias">Medias</a></li>
+		<li ><a href="{:url('index/index/Contacts')}" class="shortcut-contacts" title="Contacts">Contacts</a></li>
+		<li  class="current"><a href="{:url('index/index/medias')}" class="shortcut-medias" title="Medias">Medias</a></li>
 		<li><a href="#" class="shortcut-stats" title="Stats">Stats</a></li>
 		<li class="at-bottom"><a href="#" class="shortcut-settings" title="Settings">Settings</a></li>
 		<li><span class="shortcut-notes" title="Notes">Notes</span></li>
@@ -177,13 +172,13 @@
 		<div id="menu-content">
 
 			<header>
-				Administrator
+				{$nowpeople.ustatus}
 			</header>
 
 			<div id="profile">
 				<img src="__PUBLIC__/img/user.png" width="64" height="64" alt="User name" class="user-icon">
 				Hello
-				<span class="name">John <b>Doe</b></span>
+				<span class="name">{$nowpeople.name}</span>
 			</div>
 
 			<!-- By default, this section is made for 4 icons, see the doc to learn how to change this, in "basic markup explained" -->
@@ -333,27 +328,123 @@
 	<script src="__PUBLIC__/js/developr.navigable.js"></script>
 	<script src="__PUBLIC__/js/developr.notify.js"></script>
 	<script src="__PUBLIC__/js/developr.scroll.js"></script>
-	<script src="__PUBLIC__/js/developr.progress-slider.js"></script>
 	<script src="__PUBLIC__/js/developr.tooltip.js"></script>
-	<script src="__PUBLIC__/js/developr.content-panel.js"></script>
+	<script src="__PUBLIC__/js/developr.table.js"></script>
+
+	<!-- Plugins -->
+	<script src="__PUBLIC__/js/libs/jquery.tablesorter.min.js"></script>
+	<script src="__PUBLIC__/js/libs/DataTables/jquery.dataTables.min.js"></script>
+
+	<script src="__PUBLIC__/js/developr.message.js"></script>
+	<script src="__PUBLIC__/js/developr.modal.js"></script>
+
+
+
+	<script src="__PUBLIC__/js/developr.progress-slider.js"></script>
+
+	<script src="__PUBLIC__/js/developr.confirm.js"></script>
+	<script src="__PUBLIC__/js/developr.agenda.js"></script>
+	<script src="__PUBLIC__/js/developr.tabs.js"></script>		<!-- Must be loaded last -->
+
+	<!-- Tinycon -->
+	<script src="__PUBLIC__/js/libs/tinycon.min.js"></script>
 
 	<script>
 
 		// Call template init (optional, but faster if called manually)
 		$.template.init();
 
-		// Gallery size slider
-		$('#gallery-slider').slider({
-			min: 6,
-			value: 13,
-			max: 32,
-			onChange: function(value)
-			{
-				$('#demo-gallery').css('font-size', value+'px');
-			}
-		});
+		//edit user
+		function openModaledit()
+		{
+			
+			$.modal({
+				content: '<p>员工人事管理</p>'+
+						  '<form action="updateuser" method="post" id="form1">'+
+						  '<ul class="simple-list with-icon">'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>职员编号</td><input type="text" name="id" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>姓名</td><input type="text" name="name" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>职位</td><input type="text" name="ustatus" value="" ></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>评价</td><input type="text" name="tag" value="" ></div>'+
+						  '<button type="submit">提交</button>'+
+						  '</ul>'+
+						  '</form>',
+				title: 'Example modal window',
+				width: 300,
+				scrolling: false,
+				actions: {
+					'Close' : {
+						color: 'red',
+						click: function(win) { win.closeModal(); }
+					},
+					'Center' : {
+						color: 'green',
+						click: function(win) { win.centerModal(true); }
+					},
+					'Refresh' : {
+						color: 'blue',
+						click: function(win) { win.closeModal(); }
+					},
+					'Abort' : {
+						color: 'orange',
+						click: function(win) { win.closeModal(); }
+					}
+				},
+				buttons: {
+					'Close': {
+						classes:	'huge blue-gradient glossy full-width',
+						click:		function(win) { win.closeModal(); }
+					}
+				},
+				buttonsLowPadding: true
+			});
+		};
 
 
+		//uesr delect
+		function openModaldelect()
+		{
+			
+			$.modal({
+				content: '<p>员工人事管理</p>'+
+						  '<form action="deluser" method="post" id="form1">'+
+						  '<ul class="simple-list with-icon">'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>职员编号</td><input type="text" name="id" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>姓名</td><input type="text" name="name" value="" required="required"></div>'+
+						  '<div style="text-align: center;margin: 10px 5px 10px 5px "><td>职位</td><input type="text" name="ustatus" value="" ></div>'+
+						  '<button type="submit">提交</button>'+
+						  '</ul>'+
+						  '</form>',
+				title: 'Example modal window',
+				width: 300,
+				scrolling: false,
+				actions: {
+					'Close' : {
+						color: 'red',
+						click: function(win) { win.closeModal(); }
+					},
+					'Center' : {
+						color: 'green',
+						click: function(win) { win.centerModal(true); }
+					},
+					'Refresh' : {
+						color: 'blue',
+						click: function(win) { win.closeModal(); }
+					},
+					'Abort' : {
+						color: 'orange',
+						click: function(win) { win.closeModal(); }
+					}
+				},
+				buttons: {
+					'Close': {
+						classes:	'huge blue-gradient glossy full-width',
+						click:		function(win) { win.closeModal(); }
+					}
+				},
+				buttonsLowPadding: true
+			});
+		};
 		// Table sort - DataTables
 		var table = $('#sorting-advanced');
 		table.dataTable({
@@ -369,6 +460,97 @@
 				tableStyled = true;
 			}
 		});
+
+		// Table sort - styled
+		$('#sorting-example1').tablesorter({
+			headers: {
+				0: { sorter: false },
+				5: { sorter: false }
+			}
+		}).on('click', 'tbody td', function(event)
+		{
+			// Do not process if something else has been clicked
+			if (event.target !== this)
+			{
+				return;
+			}
+
+			var tr = $(this).parent(),
+				row = tr.next('.row-drop'),
+				rows;
+
+			// If click on a special row
+			if (tr.hasClass('row-drop'))
+			{
+				return;
+			}
+
+			// If there is already a special row
+			if (row.length > 0)
+			{
+				// Un-style row
+				tr.children().removeClass('anthracite-gradient glossy');
+
+				// Remove row
+				row.remove();
+
+				return;
+			}
+
+			// Remove existing special rows
+			rows = tr.siblings('.row-drop');
+			if (rows.length > 0)
+			{
+				// Un-style previous rows
+				rows.prev().children().removeClass('anthracite-gradient glossy');
+
+				// Remove rows
+				rows.remove();
+			}
+
+			// Style row
+			tr.children().addClass('anthracite-gradient glossy');
+
+			// Add fake row
+			$('<tr class="row-drop">'+
+				'<td colspan="'+tr.children().length+'">'+
+					'<div class="float-right">'+
+						'<button type="submit" class="button glossy mid-margin-right">'+
+							'<span class="button-icon"><span class="icon-mail"></span></span>'+
+							'Send mail'+
+						'</button>'+
+						'<button type="submit" class="button glossy">'+
+							'<span class="button-icon red-gradient"><span class="icon-cross"></span></span>'+
+							'Remove'+
+						'</button>'+
+					'</div>'+
+					'<strong>Name:</strong> John Doe<br>'+
+					'<strong>Account:</strong> admin<br>'+
+					'<strong>Last connect:</strong> 05-07-2011<br>'+
+					'<strong>Email:</strong> john@doe.com'+
+				'</td>'+
+			'</tr>').insertAfter(tr);
+
+		}).on('sortStart', function()
+		{
+			var rows = $(this).find('.row-drop');
+			if (rows.length > 0)
+			{
+				// Un-style previous rows
+				rows.prev().children().removeClass('anthracite-gradient glossy');
+
+				// Remove rows
+				rows.remove();
+			}
+		});
+
+		// Table sort - simple
+	    $('#sorting-example2').tablesorter({
+			headers: {
+				5: { sorter: false }
+			}
+		});
+
 	</script>
 </body>
 </html>
