--- a/tp5/application/index/view/index/zhuye.html
+++ b/tp5/application/index/view/index/zhuye.html
@@ -459,13 +459,13 @@ document.getElementById('imonth').innerHTML=month;
 		<div id="menu-content">
 
 			<header>
-				Administrator
+				{$nowpeople.ustatus}
 			</header>
 
 			<div id="profile">
 				<img src="__PUBLIC__/img/user.png" width="64" height="64" alt="User name" class="user-icon">
 				Hello
-				<span class="name">{$name}</b></span>
+				<span class="name">{$nowpeople.name}</b></span>
 			</div>
 
 			<!-- By default, this section is made for 4 icons, see the doc to learn how to change this, in "basic markup explained" -->
