--- a/tp5/application/index/view/index/agenda.html
+++ b/tp5/application/index/view/index/agenda.html
@@ -90,7 +90,7 @@
 		<noscript class="message black-gradient simpler">Your browser does not support JavaScript! Some features won't work as expected...</noscript>
 
 		<hgroup id="main-title" class="thin">
-			<h1>Agenda</h1>
+			<h1>议程</h1>
 		</hgroup>
 
 		<div class="with-padding">
@@ -268,13 +268,13 @@
 		<div id="menu-content">
 
 			<header>
-				Administrator
+				{$nowpeople.ustatus}
 			</header>
 
 			<div id="profile">
 				<img src="__PUBLIC__/img/user.png" width="64" height="64" alt="User name" class="user-icon">
 				Hello
-				<span class="name">{$name}</b></span>
+				<span class="name">{$nowpeople.name}</b></span>
 			</div>
 
 			<!-- By default, this section is made for 4 icons, see the doc to learn how to change this, in "basic markup explained" -->
